--- a/css/style.less
+++ b/css/style.less
@@ -20,12 +20,19 @@ hr {
   border-color: rgba(0, 0, 0, 0.0778245);
 }
 
+.btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
 
 
 .filters {
   width: 370px;
   height: 1520px;
-  margin: 30px;
+  // margin: 30px;
  
   
   &-inner {
@@ -278,7 +285,7 @@ header div {
 }
 
 ///////////////////////////////////////////
-
+/////////////NAVBAR//////////////////
 
 .navbar {
   box-sizing: border-box;
@@ -299,3 +306,161 @@ header div {
     }
   }
 }
+
+////////////////////////////////////////
+
+//////////////// КАРТОЧКИ /////////////
+
+.wraper {
+  display: flex;
+}
+
+.section {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 1570px;
+  min-height: 1715px;
+}
+
+
+.product-section {
+  width: 1170px;
+  height: 1715px;
+}
+
+.product-view {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 58px;
+}
+
+.product-cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 1542px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.view-list {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.card {
+  // position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 371px;
+  height: 486px;
+  border-radius: 8px;
+  background-color: #fff;
+    box-sizing: border-box;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1778245);
+}
+
+
+.btn-bottom button {
+  width: 186px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6F64F8;
+}
+
+.btn-bottom {
+  display: flex;
+  bottom: 0;
+  & span {
+    margin-left: 10px;
+  }
+}
+
+.btn-rating {
+  width: 60px;
+  height: 30px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 3px;
+  background-color: #6F64F8;
+  color: #fff;
+}
+
+.btn-wish {
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom-left-radius: 8px;
+  background-color: #EDEDED !important;
+  color: #2C2C2C;
+}
+
+.btn-add {
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.card-items {
+  padding: 22px;
+}
+
+.price {
+  float: right;
+  margin-top: 6px;
+  font-weight: bold;
+  color: #2C2C2C;
+}
+
+.card-img {
+  // padding: 32px;
+  margin: auto;
+}
+
+.card h3 {
+  font-size: 16px;
+  line-height: 19px;
+  margin: 16px 0 3px 0;
+  color: #2C2C2C;
+}
+
+.card p {
+  margin: 0;
+  font-weight: 300;
+  font-size: 12px;
+  color: #2C2C2C;
+}
+
+
+
+//////////////////////////ПОИСК//////////////////
+
+.product-search {
+  position: relative;
+}
+
+.search {
+  width: 100%;
+  height: 62px;
+  padding-left: 30px;
+  padding-right: 60px;
+  border-radius: 8px;
+  border: none;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.0778245);
+}
+
+.btn-search {
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  background: none;
+}
+
+/////////////////////////////////////////////////////////
