--- a/css/style.less
+++ b/css/style.less
@@ -10,7 +10,7 @@ li {
   list-style-type: none;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
@@ -20,10 +20,6 @@ hr {
   border-color: rgba(0, 0, 0, 0.0778245);
 }
 
-
-///////////Кнопки//////////////
-
-
 .btn {
   margin: 0;
   padding: 0;
@@ -32,23 +28,11 @@ hr {
   cursor: pointer;
 }
 
-.btn-clear {
-  width: 100%;
-  height: 56px;
-  border-radius: 8px;
-  background-color: #6F64F8;
-  color: #fff;
-  border: none;
-  outline: none;
-}
-
-
-///////////// шапка //////////////////////
-
 .top-bar {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-top: 30px;
 
   &__inner {
     display: flex;
@@ -69,20 +53,21 @@ hr {
     justify-content: space-between;
     align-items: center;
   }
- 
+
   &__item {
+    font-size: 14px;
+    font-weight: 600;
     padding: 10px;
-  } 
+  }
+
+  &__link {
+    color: #2c2c2c;
+  }
 }
 
-///////////////////////////////////////////////
-
-/////////////// Крошки ////////////////////////
-
-
 .card-action {
-  border-right: 1px solid  #979797;
-  color: #2C2C2C;
+  border-right: 1px solid #979797;
+  color: #2c2c2c;
   padding-right: 15px;
   margin-right: 15px;
   font-weight: 400;
@@ -91,6 +76,7 @@ hr {
 .bread-crumbs {
   display: flex;
   align-items: center;
+  margin: 25px 0 25px 0;
   justify-content: flex-start;
   width: 1570px;
   height: 40px;
@@ -104,28 +90,28 @@ hr {
   &__item::after {
     content: "/";
   }
-  
+
   &__item:last-child::after {
     display: none;
   }
-  
+
   &__item {
     display: inline;
   }
 
   &__link {
     text-decoration: none;
-    color: #6F64F8;
+    color: #6f64f8;
   }
 
-  &__home{
+  &__home {
     position: relative;
-  
-    &-img{
+
+    &-img {
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
       width: 16px;
       height: 16px;
       margin-left: -16px;
@@ -133,16 +119,10 @@ hr {
   }
 }
 
-
-//////////////////////////////////////////////////
-
-//////////// Фильтр ///////////////////////////
-
-
 .filter {
   width: 370px;
   height: 1520px;
-    
+
   &__inner {
     padding: 24px;
     border-radius: 8px;
@@ -156,7 +136,7 @@ hr {
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
-    color: #2C2C2C;
+    color: #2c2c2c;
   }
 
   &__item {
@@ -165,17 +145,17 @@ hr {
     justify-content: space-between;
     margin: 16px 0;
   }
-  
+
   &__label {
     width: 100%;
     padding-left: 20px;
     cursor: pointer;
-  } 
+  }
 }
 
 .radio {
   position: absolute;
-  -webkit-appearance:none;
+  -webkit-appearance: none;
 
   &__style {
     position: absolute;
@@ -188,42 +168,41 @@ hr {
     margin-left: -20px;
   }
 
-  &:checked + 
-  &__style::before {
+  &:checked + &__style::before {
     content: "";
     width: 15px;
     height: 15px;
     border-radius: 50px;
-    background-color: #6F64F8;
+    background-color: #6f64f8;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0px 2px 10px  #6F64F8;  
+    box-shadow: 0px 2px 10px #6f64f8;
   }
 }
 
 .range {
-  -webkit-appearance:none;
+  -webkit-appearance: none;
   outline: none;
-  background-color: #6F64F8;
+  background-color: #6f64f8;
   height: 6px;
   border-radius: 3px;
   width: 100%;
   cursor: pointer;
 
   &::-webkit-slider-thumb {
-    -webkit-appearance:none;
+    -webkit-appearance: none;
     width: 20px;
     height: 20px;
-    background-color: #6F64F8;
+    background-color: #6f64f8;
     border-radius: 50px;
   }
 }
 
 .checkbox {
   position: absolute;
-  -webkit-appearance:none;
+  -webkit-appearance: none;
 
   &__style {
     position: absolute;
@@ -236,18 +215,17 @@ hr {
     margin-left: -20px;
   }
 
-  &:checked + 
-  &__style::before {
+  &:checked + &__style::before {
     content: "";
     width: 17px;
     height: 17px;
     border-radius: 3px;
-    background-color: #6F64F8;
+    background-color: #6f64f8;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0px 2px 10px  #6F64F8;
+    box-shadow: 0px 2px 10px #6f64f8;
   }
 }
 
@@ -266,17 +244,20 @@ hr {
 }
 
 .stars:hover {
-  color: #6F64F8;
+  color: #6f64f8;
 }
 
+.btn-clear {
+  width: 100%;
+  height: 56px;
+  border-radius: 8px;
+  background-color: #6f64f8;
+  color: #fff;
+  border: none;
+  outline: none;
+}
 
-/////////////////////////////////////////
-
-
-//////////////// КАРТОЧКИ /////////////
-
-
-.section {
+.section__wrapper {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -285,13 +266,12 @@ hr {
   min-height: 1715px;
 }
 
-
-.product-section {
+.product__container {
   width: 1170px;
   height: 1715px;
 }
 
-.product-view {
+.product__view {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -299,115 +279,17 @@ hr {
   height: 58px;
 }
 
-.product-cards {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 1542px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.view-list {
+.product__view-list {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 371px;
-  height: 486px;
-  border-radius: 8px;
-  background-color: #fff;
-    box-sizing: border-box;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1778245);
-}
-
-
-.btn-bottom button {
-  width: 186px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #6F64F8;
-}
-
-.btn-bottom {
-  display: flex;
-  bottom: 0;
-  & span {
-    margin-left: 10px;
-  }
-}
-
-.btn-rating {
-  width: 60px;
-  height: 30px;
-  font-size: 14px;
-  font-weight: bold;
-  border-radius: 3px;
-  background-color: #6F64F8;
-  color: #fff;
-}
-
-.btn-wish {
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom-left-radius: 8px;
-  background-color: #EDEDED !important;
-  color: #2C2C2C;
-}
-
-.btn-add {
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom-right-radius: 8px;
-  color: #fff;
-}
-
-.card-items {
-  padding: 22px;
-}
-
-.price {
-  float: right;
-  margin-top: 6px;
-  font-weight: bold;
-  color: #2C2C2C;
-}
-
-.card-img {
-  margin: auto;
-}
-
-.card h3 {
-  font-size: 16px;
-  line-height: 19px;
-  margin: 16px 0 3px 0;
-  color: #2C2C2C;
-}
-
-.card p {
-  margin: 0;
-  font-weight: 300;
-  font-size: 12px;
-  color: #2C2C2C;
-}
-
-
-
-//////////////////////////ПОИСК//////////////////
-
-.product-search {
+.product__search {
   position: relative;
 }
 
-.search {
+.product__search-field {
   width: 100%;
   height: 62px;
   padding-left: 30px;
@@ -417,11 +299,96 @@ hr {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.0778245);
 }
 
-.btn-search {
+.product__btn-search {
   position: absolute;
   right: 30px;
   top: 20px;
   background: none;
 }
 
-/////////////////////////////////////////////////////////
+.product__cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 1542px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.product__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 371px;
+  height: 486px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-sizing: border-box;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1778245);
+}
+
+.product__btn-rating {
+  width: 60px;
+  height: 30px;
+  font-size: 14px;
+  font-weight: bold;
+  border-radius: 3px;
+  background-color: #6f64f8;
+  color: #fff;
+}
+
+.product__bottom-btn button {
+  width: 186px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6f64f8;
+}
+
+.product__bottom-btn {
+  display: flex;
+  bottom: 0;
+  .product__btn-name {
+    margin-left: 10px;
+  }
+}
+
+.product__btn-wish {
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom-left-radius: 8px;
+  background-color: #ededed !important;
+  color: #2c2c2c;
+}
+
+.product__btn-add {
+  font-size: 14px;
+  font-weight: bold;
+  border-bottom-right-radius: 8px;
+  color: #fff;
+}
+
+.product__card-items {
+  padding: 22px;
+}
+
+.product__price {
+  float: right;
+  margin-top: 6px;
+  font-weight: bold;
+  color: #2c2c2c;
+}
+
+.product__card-img {
+  margin: auto;
+}
+
+.product__name {
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: bold;
+  margin: 16px 0 3px 0;
+  color: #2c2c2c;
+}
